Fix font radio label size on small screens from 434px and down

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -603,8 +603,14 @@ input[type=reset] {
     }
 }
 
+/* For small screens from 434px wide and down */
+
 @media screen and (max-width: 434px) {
     #photos {
         margin-top: 125px;
+    }
+
+    .age {
+        font-size: small;
     }
 }
